[package]
authors = ["Jerónimo Sánchez <jeronimosg@hotmail.es>"]
categories = ["concurrency", "science", "asynchronous"]
description = "Simple WIP GPGPU framework built on top of wgpu"
edition = "2018"
keywords = ["gpgpu", "compute", "opencl", "cuda"]
license = "EUPL-1.2"
name = "gpgpu"
repository = "https://www.github.com/UpsettingBoy/gpgpu-rs"
resolver = "2"
version = "0.2.0"
homepage = "https://www.github.com/UpsettingBoy/gpgpu-rs"


[dependencies]
bytemuck = "1.7"
cfg-if = "1.0"
futures = { version = "0.3", default-features = false, features = ["executor"] }
image = { version = "0.24.6", default-features = false, optional = true }
wgpu = { version = "0.19.1", features = ["spirv"] }
ndarray = { version = "0.15", default-features = false, features = [
    "std",
], optional = true }
thiserror = "1.0"
log = { version = "0.4", default-features = false }

[dev-dependencies]
image = { version = "0.24.6", default-features = false, features = [
    "jpeg",
    "png",
] }
lazy_static = "1.4.0"
nokhwa = { version = "0.10.0", features = ["input-v4l", "input-msmf"] }
minifb = "0.23.0"

[features]
integrate-image = ["image"]
integrate-ndarray = ["ndarray"]

[[example]]
name = "simple-compute"

[[example]]
name = "mirror-image"

[[example]]
name = "samplers"

[[example]]
name = "image-compatibility"
required-features = ["integrate-image"]

[[example]]
name = "parallel-compute"

[[example]]
name = "webcam"
required-features = ["integrate-image"]

[[example]]
name = "ndarray"
required-features = ["integrate-ndarray"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
